--- a/public/global.css
+++ b/public/global.css
@@ -1,14 +1,24 @@
+@font-face {
+    font-family: Playfair;
+    src: url('PlayfairDisplay-Bold.ttf');
+}
+
+
+
+
 html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	font-family: Playfair,Arial, Helvetica, sans-serif;
 }
 
 body {
-	color: #333;
+	background-color: #9CAF88;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	color: white;
+
 }
 
 a {
@@ -60,3 +70,5 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+
