--- a/public/global.css
+++ b/public/global.css
@@ -1,17 +1,20 @@
 @font-face {
-    font-family: Playfair;
-    src: url('PlayfairDisplay-Bold.ttf');
+	font-family: warmheart;
+	src: url('./warmheart.ttf');
 }
-
-
 
 
 html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	font-family: Playfair,Arial, Helvetica, sans-serif;
+	font-family: warmheart;
+	font-weight: 600;
+	font-size: 1.5em
+	
+
 }
+
 
 body {
 	background-color: #9CAF88;
@@ -39,8 +42,6 @@ label {
 }
 
 input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
 	-webkit-padding: 0.4em 0;
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
@@ -70,5 +71,7 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+
 
 
